--- a/projeto/style.css
+++ b/projeto/style.css
@@ -7,7 +7,7 @@ body{
 }
 h1, h2, h3, h4, h5 , p ,span{
     margin: 0;
-    color: #666;
+    color: black;
 }
 .container{
     max-width: 1920px;
@@ -68,3 +68,180 @@ nav:after{
 .nav-container li a:hover{
    color: #3381f3;
 }
+/*banner*/
+#main-banner {
+    background:url('img/banner.jpg') no-repeat;
+    background-size: cover;
+    background-position: 0 55%;
+    position: relative;
+    margin-top: 100px;
+}
+#search-form{
+    position: relative;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 30em;
+    padding-bottom: 25em;
+    text-align: center;
+
+}
+#search-form h1{
+    font-size: 40px;
+}
+#search-form p{
+    margin-top: 30px;
+    margin-bottom: 40px;
+    font-size: 15px;
+    font-weight:  300;
+}
+
+#search-form input, #search-form select{
+    background-color: #fff;
+    border-radius: 6px;
+    border-color: transparent;
+    padding:10px 20px;
+    font-size: 18px; 
+    margin: 0 10px; 
+}
+#search-form input[type=submit]{
+    background-color: #3381f3;
+    text-transform: uppercase;
+    color:snow;
+    cursor: pointer;
+    transition: 0.5s;
+}
+#search-form input[type=submit]:hover{
+    background-color: #000080;
+}
+/*Ultimas vagas*/
+#lastjob-container{
+    text-align: center;
+    padding: 10px 0;
+}
+#lastjob-container h1{
+    font-size:32pt;
+    margin-top: 50px;
+}
+.wrapper{
+    position: relative;
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+#lastjob-container ul{
+    padding: 0;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+
+ 
+}
+#lastjob-container ul li{
+    list-style: none;
+    text-align: left;
+    border-bottom: 1px solid #ccc;
+    height:80px;
+    position:relative;    
+
+}
+#lastjob-container ul li:last-child{
+    border: none;
+}
+.clickarea{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+/*area da imagem*/
+.company-box{
+     display: inline-block;;
+     position: relative;
+     width: 50%;
+     padding-left: 1%;
+}
+.company-box img{
+    width: 100px;
+    margin-top: 2.5px;
+}
+.company-info{
+    display: inline-block;
+    margin-top: 15px;
+    margin-left: 20px;
+    text-align: left;
+    position: absolute;
+}
+.company-info h3{
+    font-weight: 300;
+}
+.company-info p {
+    font-weight: bold;
+    margin-top: 5px
+}
+.locality{
+    color: #6d6d6d;
+    display: inline-block;
+    width:25%;
+    position: absolute;
+    height: 100%;
+    line-height: 100%;
+}
+.locality i , .locality p{
+    display: inline-block;
+    margin-top: 30px;
+    margin-left: 30px;
+}
+/*job type*/
+.job-type{
+    display: inline-block;
+    width: 20%;
+    position: absolute;
+    height: 100%;
+    padding-top: 30px;
+    right:1%;
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 12px;
+
+}
+.job-type span{
+    display: block;
+    width: 100%;
+    height: 30%;
+    line-height: 20px;
+    border-radius:5px;
+    color: snow;
+}
+.clt{
+ background-color: rgb(172, 24, 24);
+}
+.PJ{
+ background-color: #8B008B;
+}
+.homeoffice{
+    background-color:  rgb(56, 56, 182);
+}
+/*mais vagas */
+.btnjobs-container{
+    margin-top: 50px;
+    
+}
+ .btn-jobs{
+     text-transform: uppercase;
+     background-color: #fff;
+     padding: 10px 20px;
+     color: #3381f3;
+     border: 2px solid #3381f3;
+     border-radius: 5px;
+     text-decoration: none;
+     font-weight: bold;
+     transition: 0.5s;
+    
+ }
+ .btn-jobs:hover{
+     background-color: #3381f3;
+     color:snow;
+ }
+
