--- a/projeto/style.css
+++ b/projeto/style.css
@@ -381,4 +381,142 @@ margin-bottom: 50px;
  .testmoby-box p{
      font-weight: bold;
  }
- 
+ /*blog*/
+ #blog-container{
+    padding: 5em 0;
+    text-align: center;
+ }
+ #blog-container p.center{
+     margin-bottom: 60px;
+ }
+ .article-box{
+     display: inline-block;
+     text-align: left;
+     width: 31%;
+     padding: 0 1%;
+     margin-top:5%;
+ }
+ .article-box img{
+      width: 100%;
+      border-radius:5px;
+      margin-bottom:10px;
+ }
+
+ .article-box a{
+     text-decoration: none;
+     color: #666;
+     text-transform: uppercase;
+ }
+ .article-box h4{
+     font-size: 24 px;
+     margin-bottom:15px;
+     font-weight: bold;
+ }
+ .article-date{
+    font-size: 12px;
+    margin-bottom: 15px;
+ }
+ .article-resume{
+     font-size: 12px;
+     margin-bottom: 30px;
+ }
+ .article-btn{
+     background-color:#3381f3;
+     border-color: #3381f3;
+     color: #fff;
+
+ }
+ .article-btn:hover{
+    background-color:snow;
+    color: #3381f3;
+
+}
+/*footer*/
+footer{
+    background-color: #6d6d6d;
+    padding-top: 5em;
+    padding-bottom:40px;
+    border-top: 5px solid #000080
+}
+footer h2, footer p, footer a, footer span{
+    color: #d1d1d1;
+}
+footer h2{
+    font-weight: 400;
+}
+footer p{
+    font-size: 12x;
+}
+footer a {
+    text-decoration: none;
+}
+footer ul{
+    padding:0;
+
+}
+footer li{
+    list-style: none;
+}
+.footer-box{
+    width: 31%;
+    padding: 1%;
+    float: left;
+
+}
+footer .wrapper:after{
+    clear: both;
+    content: "";
+    display: block;
+
+}
+.company-footer{
+    width: 80%;
+}
+.company-footer h2{
+    margin-top: 20px
+
+}
+.company-footer h2, .company-footer p{
+    margin-bottom: 20px;
+
+}
+footer-list li{
+    margin-bottom: 15px;
+
+}
+.footer-list a{
+    transition: .5s;
+}
+.footer-list a:hover{
+    color:#fff
+}
+.footer-list li:after{
+    clear: both;
+    content: "";
+    display: block;
+}
+.article-footer{
+    width:80%;
+}
+.footer-list.footer-listArt span{
+ display: block;
+ float: none;
+}
+.fab{
+    font-size:30px;
+    margin-right:  10px;
+    float: left;
+    margin-bottom: 10px;
+}
+.footer-list li span{
+    float: left;
+    height:30px ;
+    line-height:30px;
+}
+.footer-bottom{
+    border-top: 1px solid #363636
+}
+.footer-bottom p {
+    font-weight: 600;
+    margin-top: 40px;
+}
